Increased bolding of orange links for readability, and fixed alternate text being duplicated for gifs

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -30,6 +30,7 @@ body, html, #root {
 
 a {
   color: $brand-color-primary;
+  font-weight: bold;
 }
 
 .centered-text {
