--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -10,7 +10,6 @@
 }
 
 .navbar a {
-    color: orange;
     padding: 0px 10px 0px 10px;
     font-family: 'Roboto-Light';
 }
